detect new connection or disconnection detect what device connected and active light sequence based on device

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-HUE_USER_ID=<HUE USER ID HERE>
-HUE_IP_ADDRESS=<IP ADDRESS HERE>
-GOOGLE_SHEET_KEY=<GOOGLE_SHEET_KEY HERE>
+HUE_USER_ID=8NkldQLvpOVHuaw1NAPW9uTy0bqjtOHGvil70NRE
+HUE_IP_ADDRESS=192.168.86.29IP ADDRESS HERE>
+GOOGLE_SHEET_KEY=<GOOGLE_SHEET_KEY HERE >
